--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:v/c7RmC8zJV3oR00acMa0smJxQnxflIZbLklp6STjAs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=3307
+DB_DATABASE=project_tps
 DB_USERNAME=root
 DB_PASSWORD=
 
